--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@elysiajs/swagger": "^1.3.1",
+    "@supabase/supabase-js": "^2.93.2",
     "elysia": "latest"
   },
   "devDependencies": {
