--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "@elysiajs/swagger": "^1.3.1",
     "@supabase/supabase-js": "^2.93.2",
-    "elysia": "latest"
+    "elysia": "latest",
+    "logixlysia": "^6.1.0",
+    "supabase": "^2.72.9"
   },
   "devDependencies": {
     "bun-types": "latest"
