--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.4.1",
     "@elysiajs/swagger": "^1.3.1",
     "@supabase/supabase-js": "^2.93.2",
     "elysia": "latest",
