--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,8 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*
+!.env.example
 
 # vercel
 .vercel
@@ -40,5 +38,3 @@ yarn-error.log*
 **/*.log
 package-lock.json
 **/*.bun
-
-.env
