--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
-  "name": "blueprint-api",
+  "name": "@timbal-ai/blueprint-api",
+  "private": true,
   "version": "1.0.50",
+  "type": "module",
+  "description": "Blueprint API template for building AI applications with Elysia, Bun, and the Timbal SDK",
+  "author": "Timbal <team@timbal.ai>",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/timbal-ai/blueprint-api"
+  },
+  "homepage": "https://timbal.ai",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts"
@@ -8,10 +18,8 @@
   "dependencies": {
     "@elysiajs/cors": "^1.4.1",
     "@elysiajs/swagger": "^1.3.1",
-    "@supabase/supabase-js": "^2.93.2",
     "elysia": "latest",
-    "logixlysia": "^6.1.0",
-    "supabase": "^2.72.9"
+    "logixlysia": "^6.1.0"
   },
   "devDependencies": {
     "bun-types": "latest"
