--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ NODE_ENV=development
 BASE_URL=http://localhost:3000
 
 TIMBAL_API_HOST=api.timbal.ai
-TIMBAL_ORG_ID=
-TIMBAL_PROJECT_ID=
+TIMBAL_ORG_ID=1
+TIMBAL_PROJECT_ID=143
